-n Finally fixed the project margins when showing/not showing images

--- a/basecoat/base.scss
+++ b/basecoat/base.scss
@@ -61,6 +61,14 @@ hr {
   width: calc(100% + 30px);
 }
 
+.row-no-margin {
+  margin: 0;
+}
+
+.row-tight-margin {
+  margin: 10px -15px;
+}
+
 .row-table {
   display: table;
 }
