--- a/components/cards.scss
+++ b/components/cards.scss
@@ -44,3 +44,13 @@
   padding-bottom: 50px;
 }
 
+.plain-card {
+  border: none;
+  margin: 0;
+  border-radius: 0;
+}
+
+.card-tight-margin {
+  margin: 10px 0;
+}
+
